--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,13 @@ click==8.1.7
 Flask==3.0.3
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
+gunicorn==22.0.0
 importlib_metadata==7.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 Python==3.9.6
+packaging==24.0
 SQLAlchemy==2.0.30
 typing_extensions==4.12.1
 Werkzeug==3.0.3
